RESOLVED FIXED73914
[Qt] Fix assertion in QtViewportInteractionEngine.cpp:468
https://bugs.webkit.org/show_bug.cgi?id=73914
Summary [Qt] Fix assertion in QtViewportInteractionEngine.cpp:468
Alexander Færøy
Reported 2011-12-06 05:48:36 PST
Error: ASSERTION FAILED: m_suspendCount /scratchbox/users/ahf/home/ahf/swork/src/webkit-trunk/Source/WebKit2/UIProcess/qt/QtViewportInteractionEngine.cpp(468) : void WebKit::QtViewportInteractionEngine::pinchGestureStarted(const QPointF&) 1 0x7ffff4d40ac4 2 0x7ffff4d2d932 3 0x7ffff4d2c8f0 4 0x7ffff4d31dc5 5 0x7ffff4cd51c1 6 0x7ffff4d2c66f 7 0x7ffff4d2b711 8 0x7ffff4c72db3 9 0x7ffff4c72e1e 10 0x7ffff414ce1a 11 0x7ffff4160ed1 12 0x7ffff415face 13 0x7ffff415f607 Program received signal SIGSEGV, Segmentation fault. 0x00007ffff4d40ac9 in WebKit::QtViewportInteractionEngine::pinchGestureStarted (this=0x71fc80, pinchCenterInContentCoordinates=...) at /scratchbox/users/ahf/home/ahf/swork/src/webkit-trunk/Source/WebKit2/UIProcess/qt/QtViewportInteractionEngine.cpp:468 468 ASSERT(m_suspendCount); Patch coming up.
Attachments
Patch (1.53 KB, patch)
2011-12-06 05:53 PST, Alexander Færøy
no flags
Patch (1.49 KB, patch)
2011-12-06 06:17 PST, Alexander Færøy
no flags
Alexander Færøy
Comment 1 2011-12-06 05:53:51 PST
Alexander Færøy
Comment 2 2011-12-06 06:09:41 PST
Comment on attachment 118033 [details] Patch Kling pointed out my obvious failure in the ChangeLog entry.
Alexander Færøy
Comment 3 2011-12-06 06:17:29 PST
WebKit Review Bot
Comment 4 2011-12-06 08:08:57 PST
Comment on attachment 118037 [details] Patch Rejecting attachment 118037 [details] from commit-queue. New failing tests: media/event-attributes.html Full output: http://queues.webkit.org/results/10703674
Alexander Færøy
Comment 5 2011-12-06 08:58:01 PST
Comment on attachment 118037 [details] Patch This patch only affects Qt and the test-failure was a Chromium only issue. Reasking for cq.
Jesus Sanchez-Palencia
Comment 6 2011-12-06 10:17:57 PST
Comment on attachment 118037 [details] Patch cq+ as asked by ahf on #qtwebkit.
WebKit Review Bot
Comment 7 2011-12-06 12:47:46 PST
Comment on attachment 118037 [details] Patch Clearing flags on attachment: 118037 Committed r102168: <http://trac.webkit.org/changeset/102168>
WebKit Review Bot
Comment 8 2011-12-06 12:47:51 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.