[Qt] Fix assertion in QtViewportInteractionEngine.cpp:468 https://bugs.webkit.org/show_bug.cgi?id=73914

Patch by Alexander Færøy <alexander.faeroy@nokia.com> on 2011-12-06
Reviewed by Kenneth Rohde Christiansen.

m_suspendCount should always be zero when a pinch gesture is started.

* UIProcess/qt/QtViewportInteractionEngine.cpp:
(WebKit::QtViewportInteractionEngine::pinchGestureStarted):

Canonical link: https://commits.webkit.org/90615@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102168 268f45cc-cd09-0410-ab3c-d52691b4dbfc